# hanpipette.uk

./: .env.production  .gitignore  README.md  index.html  package.json  vite.config.ts
server/: .env.example  .gitignore  README.md  pyproject.toml
server/app/: main.py
src/: App.svelte  app.css
src/lib/: api.ts
src/routes/: Admin.svelte  Chat.svelte  Home.svelte
